[metadata]
name = kombu-stomp
version = 0.0.0.dev4
author = NTTE-AM OSS
author-email = am.oss@ntt.eu
summary =
description-file = README.rst
license = BSD
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2
    Programming Language :: Python :: Implementation :: CPython
    Intended Audience :: Developers
    Topic :: Communications
    Topic :: System :: Distributed Computing
    Topic :: System :: Networking
    Topic :: Software Development :: Libraries :: Python Modules
    Natural Language :: English
keywords = Kombu Celery STOMP ActiveMQ stomp.py
[files]
packages = kombu_stomp
